# violet

./: README.md
violet/: CMakeLists.txt  Doxyfile  package.xml  rosdoc.yaml
violet/config/: config.yaml  definitions.yaml  surf_confusion_matrix.csv
violet/doc/: adding_input_sources.md  adding_predicates.md  event_loop.md  mainpage.md  using_bayes_update_api.md
violet/include/violet/: bayesian_fusion.h  color.h  defined_predicates.h  enums.h  global_parameters.h  input_source.h  input_source_manager.h  knowledge_base.h  object_catalog.h  object_database.h  object_info.h  predicate.h  predicate_manager.h  util.h
violet/launch/: violet.launch
violet/src/: bayesian_fusion.cpp  defined_predicates.cpp  global_parameters.cpp  input_source_manager.cpp  knowledge_base.cpp  object_catalog.cpp  object_database.cpp  object_info.cpp  predefined_object_loader.cpp  predicate.cpp  util.cpp  violet_main.cpp
violet/src/inputsources/: hand.cpp  line_mod.cpp  predefined_objects.cpp  segmentation.cpp  surf.cpp
violet/visualization/: violet_visualization_marker_publisher.cpp
violet_msgs/: CMakeLists.txt  package.xml
violet_msgs/msg/: Object.msg  ObjectInfo.msg  ObjectProperty.msg  Predicate.msg  WorldState.msg
violet_srvs/: CMakeLists.txt  package.xml
violet_srvs/srv/: RegisterSource.srv
