<?xml version="1.0" encoding="utf-8" ?>
<package>
    <name>violet</name>
    <version>0.2.0</version>
    <description>Violet core package</description>
    <maintainer email="93arda@gmail.com">Arda Inceoglu</maintainer>
    <maintainer email="ongun.kanat@gmail.com">Ongun Kanat</maintainer>
    <license>GPLv3</license>
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>violet_msgs</build_depend>
    <build_depend>violet_srvs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>violet_msgs</run_depend>
    <run_depend>violet_srvs</run_depend>
</package>

