<?xml version="1.0"?>
<package>
  <name>violet_srvs</name>
  <version>0.2.0</version>
  <description>VIOLET service files</description>
  <maintainer email="ongun.kanat@gmail.com">Ongun Kanat</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
